@@ -1555,6 +1555,16 @@ void document_rename_file(GeanyDocument *doc, const gchar *new_filename)
 }
 
 
+/* Return TRUE if the document hasn't been saved before, i.e. either the filename or
+ * the real_path is not set. */
+gboolean document_need_save_as(GeanyDocument *doc)
+{
+	g_return_val_if_fail(doc != NULL, FALSE);
+
+	return (doc->file_name == NULL || doc->real_path == NULL);
+}
+
+
 /**
  * Saves the document, detecting the filetype.
  *
